<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cmarshall.newsrssreader.StartupScreen">
    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/startupScreenName"
        android:textSize="30sp"
        android:paddingLeft="30sp"
        android:paddingTop="30sp"
        android:paddingRight="30sp"
        android:lines="2"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <CheckBox
        android:id="@+id/guardianTechnology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30sp"
        android:text="@string/guardianSource"
        />

    <CheckBox
        android:id="@+id/bbcNewsTechnology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30sp"
        android:text="@string/bbcNewsTechnology"
        />

    <CheckBox
        android:id="@+id/bbcNewsEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30sp"
        android:text="@string/bbcNewsEducation"
        />

    <Button
        android:id="@+id/addNewsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewsButton"
        android:onClick="setupButton"
        />


</LinearLayout>
